tests/ui/safety-constraint-attribute/invalid-pred-error/expected
error[E0308]: mismatched types
   |
| #[safety_constraint(x >= 0 && y >= 0)]
   |                          ^ expected `&i32`, found integer
   |
help: consider dereferencing the borrow
   |
| #[safety_constraint(*x >= 0 && y >= 0)]
   |                     +

error[E0308]: mismatched types
   |
| #[safety_constraint(x >= 0 && y >= 0)]
   |                                    ^ expected `&i32`, found integer
   |
help: consider dereferencing the borrow
   |
| #[safety_constraint(x >= 0 && *y >= 0)]
   |
